Cambio en sass y modificacion de html agregando una galeria en grid

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "desafio-sass",
+  "name": "phasmophobia",
   "version": "1.0.0",
-  "description": "",
+  "description": "its a website of a game about paranormal events in houses",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
